--- a/courses.tex
+++ b/courses.tex
@@ -94,7 +94,7 @@ Any required extra material will be made available in Google Classroom.
     Week & Topics \\
     \midrule
     \multirow{2}{*}{1} & Brief history of data science \pcref{chap:history} \\
-      & Peliminaries \pcref{chap:preliminaries} \\
+      & Preliminaries \pcref{chap:preliminaries} \\
     \midrule
     2 & \bfseries Written test \\
     \midrule
