Note about undergrad students.

--- a/courses.tex
+++ b/courses.tex
@@ -151,6 +151,8 @@ presented per day, with 30 minutes for each presentation and 20 minutes for ques
 
 Prof. Filipe A. N. Verri
 
+\paragraph{Important:} Only ITA's undergraduate students are allowed to take this course.
+
 \paragraph{Number of students:} Approx. 20 (no more than 40 students)
 
 \paragraph{Course load:} 2--0--1--5
