--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 \addbibresource{references.bib}
 
 \usepackage{amsmath}
+\usepackage{mathtools}
 \usepackage[colorlinks]{hyperref}
 \usepackage{fontspec}
 \usepackage{sourcesanspro}
@@ -134,7 +135,7 @@
 \begin{titlingpage}
   \begin{tikzpicture}[remember picture, overlay]
     \node[anchor=south east, inner sep=8mm] at (current page.south east) {%
-      \reflectbox{\includegraphics[height=0.6\paperheight]{images/toucan.png}}%
+      \reflectbox{\includegraphics[height=0.6\paperheight]{images/toucan_bw.png}}%
     };
     \node[anchor=south east, inner sep=10mm] at (current page.south east) {\large\sffamily\textcolor{black!60}\today};
     \node[anchor=north, yshift=-20mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data science}};
