--- a/main.tex
+++ b/main.tex
@@ -149,6 +149,15 @@
 \vfill
 
 {
+  \footnotesize\noindent\color{red}
+  \textbf{Disclaimer:} This version is a work in progress.  Many parts of the book have
+  been drafted with the help of \href{https://github.com/features/copilot}{GitHub Copilot}
+  and may not be revised yet by the author.  The author is not responsible for any
+  misinformation contained in this book.
+}
+
+\vspace{0.5cm}
+{
 \footnotesize\noindent
 Book cover image was created with the assistance of \href{https://openai.com/dall-e-2}{DALL·E 2}.
 }
